# langeval

./: .gitignore  README.md  pyproject.toml
examples/ceval/: README.md  ceval-llm-judge.yaml  ceval-only-judge.yaml  ceval-only-run.yaml  ceval-with-answer.jsonl  ceval-with-answer.yaml  ceval-zh.ipynb  chat-eval.yaml  prompt-eval.yaml
examples/llm_judge/: README.md  ceval-llm-judge.jsonl  ceval-llm-judge.yaml
examples/rag-eval/: .gitignore  cmrc-eval-zh.yaml  fiqa_eval.jsonl  rag-eval-zh.ipynb  rag-eval.yaml  rag.py  retrieval-eval.yaml  retrieval.py
examples/rag-eval-not-work/: cmrc-eval-zh.yaml  rag-eval-zh.ipynb
examples/rag-eval/c-mteb/: c-mteb.md
examples/rag-eval/rerank/: README.md  retrieval-rerank-eval.yaml  retrieval-rerank-server.py  retrieval-rerank.py
examples/sql-eval/: dusql_sample.jsonl  dusql_sample.sqlite  sql-eval-qianfan-limiter.yaml  sql-eval-qianfan.yaml  sql-eval.yaml
src/langeval/: __about__.py  __main__.py
src/langeval/cli/: __init__.py  application.py  constant.py  terminal.py
src/langeval/cli/rerun/: __init__.py
src/langeval/cli/run/: __init__.py  display.py  run.py
src/langeval/cli/show/: __init__.py
src/langeval/config/: __init__.py
src/langeval/evaluators/: __init__.py  evaluator.py  example.py  exception.py  run.py
src/langeval/evaluators/nlp/: __init__.py
src/langeval/evaluators/rag/: __init__.py  utils.py
src/langeval/evaluators/sql/: __init__.py  sqleval.py
src/langeval/models/: __init__.py  embeddings.py  exception.py  llms.py  openai.py  qianfan.py  types.py
src/langeval/providers/: __init__.py  exception.py  output_parser.py  provider.py  run.py
src/langeval/tasks/: __init__.py  ratelimiter.py  runner.py  task.py
