[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langeval-cli"
dynamic = ["version"]
description = 'Evaluation for AI apps and agent.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Tao Yang", email = "swulling@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click ~= 8.0",
  "rich ~= 13.0",
  "numpy ~= 1.0",
  "pydantic",
  "openai > 1.0",
  "Jinja2",
  "pandas",
  "PyYAML",
  "scikit-learn",
  "rouge_chinese",
  "jieba",
  "nltk",
  "func_timeout",
  "sqlalchemy"
]

[project.urls]
Documentation = "https://github.com/ninehills/langeval#readme"
Issues = "https://github.com/ninehills/langeval/issues"
Source = "https://github.com/ninehills/langeval"

[project.scripts]
langeval = "langeval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/langeval"]

[tool.hatch.version]
path = "src/langeval/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/langeval tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore: Exception must not use an f-string literal, assign to variable first
  "EM102", "EM101",
  # Ignore: Use `X | Y` for type annotations
  "UP007",
  # Ignore: The use of `datetime.datetime.now()` without `tz` argument is not allowed
  "DTZ005", "DTZ003",
  # Ignore: Boolean-typed positional argument in function definition
  "FBT001",
  # Ignore: String contains ambiguous `，` (FULLWIDTH COMMA). Did you mean `,` (COMMA)
  "RUF001", "RUF003",
  # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
  "FBT002",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["langeval"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["langeval", "tests"]
branch = true
parallel = true
omit = [
  "src/langeval/__about__.py",
]

[tool.coverage.paths]
langeval = ["src/langeval", "*/langeval/src/langeval"]
tests = ["tests", "*/langeval/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
